<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/action_settings"
        android:id="@+id/textView"
        android:background="#009688"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:textSize="26sp"
        android:textAlignment="center" />

        <TextView
            android:id="@+id/txtwelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/Welcome"
            android:paddingTop="50dp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/txtuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtwelcome"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/LogoutBtn" />


</RelativeLayout>